--- a/css/style.css
+++ b/css/style.css
@@ -119,13 +119,23 @@ footer p {
 
 nav {
     font-size: 200%;
-    margin: 2.5%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
-    width: 100%;
+    width: 90%;
+}
+
+nav a {
+    width: 10%;
+    text-align: center;
+    align-items: center;
+}
+
+a img {
+    width: 80%;
+    height: 80%;
 }
 
 #bottom-img {
