--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ footer {
     justify-content: space-around;
     align-items: center;
     position: absolute;
-    top: 240%;
+    top: 260%;
     min-height: 15%;
     width: 100%;
     background-color: white;
@@ -138,9 +138,20 @@ a img {
     height: 80%;
 }
 
+div p {
+    font-size: 320%;
+    width: 100%;
+    padding: 2%;
+    padding-top: 0;
+    text-align: justify;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
 #bottom-img {
     position: absolute;
-    top: 140%;
+    top: 160%;
     min-height: 100vh;
     width: 100%;
     z-index: 0;
