--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,18 @@ body {
     text-align: justify;
 }
 
+p {
+    font-family: "PT Sans Narrow", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+a {
+    font-family: "PT Sans Narrow", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
 #div2 {
     display: flex;
     flex-direction: row;
