--- a/merch/css/style.css
+++ b/merch/css/style.css
@@ -29,6 +29,9 @@ a {
     color: black;
     text-decoration: none;
     z-index: 100;
+    font-family: "PT Sans Narrow", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 h1 {
@@ -74,6 +77,9 @@ img {
 p {
     font-size: 200%;
     margin-bottom: 1.2%;
+    font-family: "PT Sans Narrow", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 div {
