--- a/merch/css/style.css
+++ b/merch/css/style.css
@@ -60,6 +60,10 @@ button {
     font-size: 180%;
 }
 
+button:hover {
+    background-color: rgb(104, 104, 104);
+}
+
 hr {
     border: 0;
     width: 100%;               
