--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,8 @@
 }
 
 body {
-    min-height: 200vh;
+   min-height: 100vh;
+    width: 100%;
 }
 
 #top-image {
@@ -15,46 +16,59 @@ body {
 }
 
 #div1 {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
     position: absolute;
+    left: 0;
+    right: 0;
     background-color: rgb(100, 100, 100, 0.4);
     top: 20%;
-    margin: auto;
-    left: 20%;
-    right: 20%;
     z-index: 100;
-    text-align: justify;
+    font-family: "Anton", sans-serif;
+    font-style: normal;
+    color: white;
+    font-size: 4em;
+    text-align: center;
+
 }
 
 p {
     font-family: "PT Sans Narrow", sans-serif;
-  font-weight: 400;
-  font-style: normal;
+    font-weight: 400;
+    font-style: normal;
 }
 
 a {
     font-family: "PT Sans Narrow", sans-serif;
-  font-weight: 400;
-  font-style: normal;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 200%;
+    color: white;
+    text-decoration: none;
+    z-index: 100;
 }
 
 #div2 {
-    display: flex;
-    flex-direction: row;
-    position: absolute;
-    background-color: rgb(100, 100, 100, 0.4);
-    top: 60%;
+    position: relative;
     margin: auto;
-    left: 20%;
-    right: 20%;
-    z-index: 100;
     text-align: justify;
+    width: 95%;
+    left: 0;
+    right: 0;
+    
+}
+
+#main {
+    position: relative;
+    min-height: 90vh;
+    width: 100%;
+    min-width: 0;
 }
 
 img {
     height: 90vh;
+}
+
+#title {
+    font-size: 40%;
 }
 
 footer {
@@ -63,22 +77,12 @@ footer {
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
-    position: absolute;
-    top: 260%;
-    min-height: 15%;
-    width: 100%;
+    position: relative;
+    min-height: 100%;
+    width: 90%;
     background-color: white;
     z-index: 100;
-}
-
-h1 {
-    font-family: "Anton", sans-serif;
-    font-weight: 1700;
-    font-style: normal;
-    width: 100%;
-    display: inline-block;
-    color: white;
-    font-size: 900%;
+    margin: 2%;
     text-align: center;
 }
 
@@ -88,56 +92,44 @@ h2 {
     font-weight: 400;
     font-style: normal;
     font-size: 700%;
-    position: absolute;
-    top: 94%;
-    margin: auto;
-    text-align: center;
-    right: 20%;
-    left: 20%;
-    z-index: 100;
-}
-
-h3 {
-    font-family: "Anton", sans-serif;
-    font-weight: 1700;
-    font-style: normal;
-    width: 100%;
-    display: inline-block;
-    color: white;
-    font-size: 600%;
-    text-align: center;
-}
-
-a {
-    font-size: 200%;
-    color: white;
-    text-decoration: none;
-    z-index: 100;
 }
 
 footer a {
-    font-size: 200%;
+    font-size: 2em;
     color: black;
     text-decoration: none;
     z-index: 100;
 }
 
 footer p {
-    font-size: 200%;
+    font-size: 2em;
     color: black;
     text-decoration: none;
     z-index: 100;
 }
 
+
 nav {
-    font-size: 200%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
-    width: 90%;
+    align-content: space-around;
+    margin: auto;
+ }
+
+.flex {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    align-content: space-around;
+    margin: 5%
 }
+
+
 
 nav a {
     width: 10%;
@@ -150,31 +142,18 @@ a img {
     height: 80%;
 }
 
-div p {
-    font-size: 320%;
-    width: 100%;
-    padding: 2%;
-    padding-top: 0;
-    text-align: justify;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+#info {
+    margin-right: 10%;
+    margin-left: 10%;
+    font-size: 2em;
+    min-height: 100%;
 }
 
-#bottom-img {
-    position: absolute;
-    top: 160%;
-    min-height: 100vh;
+hr {
+    border: 0;
     width: 100%;
-    z-index: 0;
-}
-
-#about {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    position: absolute;
-    top: 115%;
-    width: 100%;
-    min-height: 25vh;
+    background-color: rgb(117, 187, 63);
+    height: 10px;
+    position: relative;
+    margin-top: 2%;
 }
