--- a/merch/css/style.css
+++ b/merch/css/style.css
@@ -30,23 +30,28 @@ a {
     text-decoration: none;
     z-index: 100;
     font-family: "PT Sans Narrow", sans-serif;
-  font-weight: 400;
-  font-style: normal;
+    font-weight: 400;
+    font-style: normal;
+}
+
+#div1 {
+    position: relative;
+    left: 0;
+    right: 0;
+    top: 20%;
+    z-index: 100;
+    font-family: "Anton", sans-serif;
+    font-style: normal;
+    color: white;
+    font-size: 3em;
+    text-align: center;
 }
 
 h1 {
     color: rgb(117, 187, 63);
-    font-family: "Anton", sans-serif;
-    font-weight: 1700;
-    font-style: normal;
-    width: 100%;
-    display: inline-block;
-    font-size: 900%;
-    text-align: center;
-    margin-bottom: 3%;
 }
 
-h3{
+h3 {
     font-size: 300%;
     color: rgb(90, 28, 0);
     margin-bottom: 1.2%;
@@ -66,12 +71,12 @@ button:hover {
 
 hr {
     border: 0;
-    width: 100%;               
+    width: 100%;
     background-color: rgb(117, 187, 63);
     height: 10px;
     position: absolute;
     bottom: 0;
-  }
+}
 
 img {
     width: 28%;
@@ -82,11 +87,11 @@ p {
     font-size: 200%;
     margin-bottom: 1.2%;
     font-family: "PT Sans Narrow", sans-serif;
-  font-weight: 400;
-  font-style: normal;
+    font-weight: 400;
+    font-style: normal;
 }
 
-div {
+.divs {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -98,7 +103,7 @@ div {
     margin-top: 10%;
 }
 
-#inner-div{
+#inner-div {
     width: 70%;
     position: absolute;
     right: 0;
