--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ a {
     font-family: "PT Sans Narrow", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 200%;
+    font-size: 2em;
     color: white;
     text-decoration: none;
     z-index: 100;
