--- a/merch/css/style.css
+++ b/merch/css/style.css
@@ -3,14 +3,19 @@
     border: 0;
 }
 
+body {
+   min-height: 100vh;
+    width: 100%;
+}
+
 nav {
-    font-size: 200%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: center;
-    width: 90%;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        align-items: center;
+        align-content: space-around;
+        margin: auto;
 }
 
 nav a {
@@ -25,16 +30,18 @@ a img {
 }
 
 a {
-    font-size: 200%;
-    color: black;
-    text-decoration: none;
-    z-index: 100;
     font-family: "PT Sans Narrow", sans-serif;
     font-weight: 400;
     font-style: normal;
+    font-size: 2em;
+    color: black;
+    text-decoration: none;
+    z-index: 100;
 }
 
 #div1 {
+    margin-top: 2%;
+    margin-bottom: 2%;
     position: relative;
     left: 0;
     right: 0;
