--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-   min-height: 100vh;
+    min-height: 100vh;
     width: 100%;
 }
 
@@ -53,7 +53,7 @@ a {
     width: 95%;
     left: 0;
     right: 0;
-    
+
 }
 
 #main {
@@ -117,7 +117,7 @@ nav {
     align-items: center;
     align-content: space-around;
     margin: auto;
- }
+}
 
 .flex {
     display: flex;
@@ -128,8 +128,6 @@ nav {
     align-content: space-around;
     margin: 5%
 }
-
-
 
 nav a {
     width: 10%;
@@ -153,7 +151,7 @@ hr {
     border: 0;
     width: 100%;
     background-color: rgb(117, 187, 63);
-    height: 10px;
+    height: 0.7em;
     position: relative;
     margin-top: 2%;
 }
