--- a/about/css/style.css
+++ b/about/css/style.css
@@ -30,52 +30,78 @@ a img {
 }
 
 #div1 {
-    margin-top: 2%;
-    margin-bottom: 2%;
     position: relative;
     left: 0;
     right: 0;
     top: 20%;
+    height: 100%;
     z-index: 100;
-    font-family: "Anton", sans-serif;
-    font-style: normal;
-    font-size: 3em;
-    text-align: center;
 }
 
 h1 {
+    margin: 2%;
+    font-size: 6em;
+    text-align: center;
+    font-family: "Anton", sans-serif;
+    font-style: normal;
+    text-align: center;
     color: rgb(117, 187, 63);
 }
 
 h3 {
     font-size: 3em;
     color: rgb(90, 28, 0);
-    color: rgb(90, 28, 0);
     font-family: "Kaushan Script", cursive;
     font-weight: 400;
     font-style: normal;
     margin-bottom: 1.2%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-button {
-    height: 2%;
-    width: 32%;
-    align-self: center;
-    border-radius: 20px;
-    font-size: 180%;
+#inner-div {
+    position: relative;
+    left: 2%;
+    width: 50%;
+    margin: 1%;
+
 }
 
-button:hover {
-    background-color: rgb(104, 104, 104);
+#inner-img {
+    background-image: url(../img/wildfire.jpg.webp);
+    background-repeat: repeat-x;
+    height: 31em;
+    width: 40em;
+    border-radius: 100%;
+    margin: 2%;
+    transition-duration: 2s;
+}
+
+#inner-img:hover {
+    background-image: url("../img/castle-rock-state-park-vista-1536x1024.jpeg");
+    transform: rotate(360deg);
+}
+
+#div2 {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    position: relative;
+    margin: auto;
+    margin-top: 5%;
+    text-align: justify;
+    width: 95%;
+    left: 0;
+    right: 0;
 }
 
 hr {
     border: 0;
     width: 100%;
     background-color: rgb(117, 187, 63);
-    height: 2%;
-    position: absolute;
-    bottom: 0;
+    height: 0.7em;
+    position: relative;
+    margin-top: 2%;
 }
 
 img {
@@ -90,6 +116,10 @@ p {
     font-style: normal;
 }
 
+#fundiv {
+    background-color: red;
+}
+
 a {
     font-family: "PT Sans Narrow", sans-serif;
     font-weight: 400;
@@ -102,22 +132,12 @@ a {
 
 .divs {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     flex-wrap: wrap;
     min-height: 45vh;
     position: relative;
 }
 
-#title {
-    margin-top: 10%;
-}
-
-#inner-div {
-    width: 70%;
-    position: absolute;
-    right: 0;
-    text-align: center;
-}
 
 footer {
     display: flex;
