--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ body {
     position: absolute;
     top: 0%;
     z-index: 0;
+    background-color: rgb(117, 187, 63);
 }
 
 #div1 {
@@ -110,6 +111,7 @@ footer p {
 
 
 nav {
+    background-image: linear-gradient(black, rgba(0,0,0,0));
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -117,6 +119,8 @@ nav {
     align-items: center;
     align-content: space-around;
     margin: auto;
+    position: relative;
+    z-index: 101;
 }
 
 .flex {
