--- a/about/css/style.css
+++ b/about/css/style.css
@@ -44,7 +44,6 @@ h1 {
     text-align: center;
     font-family: "Anton", sans-serif;
     font-style: normal;
-    text-align: center;
     color: rgb(117, 187, 63);
 }
 
@@ -83,13 +82,10 @@ h3 {
 }
 
 #div2 {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    text-align: center;
     position: relative;
     margin: auto;
     margin-top: 5%;
-    text-align: justify;
     width: 95%;
     left: 0;
     right: 0;
@@ -114,10 +110,6 @@ p {
     font-family: "PT Sans Narrow", sans-serif;
     font-weight: 400;
     font-style: normal;
-}
-
-#fundiv {
-    background-color: red;
 }
 
 a {
@@ -166,4 +158,31 @@ footer p {
     color: black;
     text-decoration: none;
     z-index: 100;
+}
+
+@media screen and (max-width: 800px) {
+    * {
+        font-size: 0.9em;
+    }
+
+    .divs {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        position: relative;
+        align-items: center;
+    }
+
+    #div1 {
+        text-align: justify;
+    }
+
+    #inner-img {
+        transition-duration: 1s;
+    }
+
+    #inner-img:active {
+        transform: rotate(360deg);
+    }
+
 }
