--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,7 @@ h2 {
     font-family: "Kaushan Script", cursive;
     font-weight: 400;
     font-style: normal;
-    font-size: 700%;
+    font-size: 4em;
 }
 
 footer a {
