--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@ a {
     min-height: 90vh;
     width: 100%;
     min-width: 0;
+    margin-bottom: 2%;
 }
 
 img {
@@ -149,6 +150,7 @@ a img {
     margin-left: 10%;
     font-size: 2em;
     min-height: 100%;
+    margin-top: 2%;
 }
 
 hr {
