--- a/lineup/css/style.css
+++ b/lineup/css/style.css
@@ -47,6 +47,7 @@ h3 {
     margin-bottom: 1.2%;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 2%;
 }
 
 div {
@@ -65,6 +66,7 @@ hr {
 }
 
 .info {
+    font-size: 2em;
     color: black;
     margin: 2%;
     text-align: justify;
@@ -94,7 +96,7 @@ hr {
 p {
     position: relative;
     z-index: 200;
-    font-size: 2em;
+    font-size: 2.6em;
     font-family: "PT Sans Narrow", sans-serif;
     font-weight: 400;
     font-style: normal;
